# coordinates_outliers

./: .gitignore  Cargo.toml  README.md
.github/workflows/: bench_pull_request.yml  bench_push.yml
benches/: benchmark.rs
src/: connection.rs  graph.rs  lib.rs  main.rs  point.rs  pointplane.rs
