[package]
name = "coordinates_outliers"
version = "0.1.0"
edition = "2021"
authors = ["sn99 <siddharthn.099@gmail.com>"]
description = "A simple outlier detection in 2D paths taken"
repository = "https://github.com/sn99/location_outliers"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sn99/location_outliers"
keywords = ["accumulator", "location", "outliers", "graphs"]
documentation = "https://docs.rs/location_outliers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_accumulator = "0.3.1"
rand = "0.8.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
